--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
 }
 
 
+
 .navigation {
 
   display: flex;
@@ -29,9 +30,10 @@ body{
 
 .here {
   border-radius: .5rem;
-	border: 1px solid rgba(0,180,220,0.5);
+	border: 1px solid rgba(0,180,220,0.3);
 	background: linear-gradient(180deg,rgba(0,180,220,0.3),rgba(0,180,220,0.1),rgba(0,180,220,0.1),rgba(0,180,220,0.3));
-	box-shadow: 0 0 2rem rgba(0,180,220,.1) inset;
+  box-shadow: 0 0 2rem rgba(0,180,220,.1) inset;
+  opacity: 0.6;
 }
 
 a {
@@ -45,6 +47,23 @@ a {
   /* text-align:center; */
   border-top:2px solid rgba(255,255,255,.2);
   border-bottom:2px solid rgba(0,0,0,.1);
+}
+
+.skip > a{
+  left: 0;
+  padding: 6px;
+  position: absolute;
+  top: -8vh;
+  height: 5vh;
+  font-size: 200%;
+  -webkit-transition: top 1s ease-out;
+  transition: top 1s ease-out;
+  z-index: 100000;
+}
+
+.skip > a:focus{
+  top: 0px;
+  background: rgba(0,0,0,.7);
 }
 
 ul,
@@ -164,7 +183,7 @@ a:active {
   padding: 20px 0;
   width: 90%;
   align-self: center;
-  height: 100%;
+  height: 110%;
   transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease;
   margin: 5px;
@@ -279,5 +298,20 @@ footer p{
 
   footer{
     position: fixed;
+  }
+}
+
+@media screen and (prefers-reduced-motion: reduce){
+  html{
+      scroll-behavior: auto; /* Removes scroll animation */
+  }
+
+  .skip a{
+    -webkit-transition: none; /* Your code here - set to default setting */
+    transition: none; /* Your code here - set to default setting */
+  }
+
+  .skip a:focus{
+    top:0;
   }
 }
