--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,22 @@
+
 h1{
-  font-size: 200%;
+  /* font-size: 300%; */
   color: white;
+  /* line-height: 250%; */
+  background: linear-gradient(to left,rgba(0,180,220,0.3),rgba(0,180,220,0.1),rgba(0,180,220,0.1),rgba(0,180,220,0.3));
+}
+
+h2{
+  color: white;
+  font-size: 200%;
+  text-align: center;
+  line-height: 250%;
+  background: linear-gradient(to left,rgba(0,180,220,0.3),rgba(0,180,220,0.1),rgba(0,180,220,0.1),rgba(0,180,220,0.3));
+}
+
+.occupy{
+  visibility: visible;
+  background: linear-gradient(to left,rgba(0,180,220,0.3),rgba(0,180,220,0.1),rgba(0,180,220,0.1),rgba(0,180,220,0.3));
 }
 
 .flip-cards-flex{
@@ -9,6 +25,7 @@ h1{
   flex-wrap: wrap;
   /* justify-items: center; */
   margin:auto 0;
+  background: linear-gradient(to left,rgba(0,180,220,0.3),rgba(0,180,220,0.1),rgba(0,180,220,0.1),rgba(0,180,220,0.3));
 }
 
 .flip-card {
@@ -67,7 +84,30 @@ h1{
     line-height: 200px;
   }
 
-  @media all and (min-width:500px){
+  .hit-the-floor {
+    color: #fff;
+    font-size: 5em;
+    font-weight: bold;
+    font-family: Helvetica;
+    text-shadow: 
+      0 1px 0 #ccc, 
+      0 2px 0 #c9c9c9, 
+      0 3px 0 #bbb, 
+      0 4px 0 #b9b9b9, 
+      0 5px 0 #aaa, 
+      0 6px 1px rgba(0,0,0,.1), 
+      0 0 5px rgba(0,0,0,.1), 
+      0 1px 3px rgba(0,0,0,.3), 
+      0 3px 5px rgba(0,0,0,.2), 
+      0 5px 10px rgba(0,0,0,.25), 
+      0 10px 10px rgba(0,0,0,.2), 
+      0 20px 20px rgba(0,0,0,.15);
+  }
+
+  @media all and (min-width:600px){
+    #bottom{
+      display: block;
+    }
     footer{
       position: fixed;
     }
