--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@ body{
   z-index: 10000; */
 }
 
+
+
 .here {
   border-radius: .5rem;
 	border: 1px solid rgba(0,180,220,0.3);
@@ -35,6 +37,12 @@ body{
   box-shadow: 0 0 2rem rgba(0,180,220,.1) inset;
   opacity: 0.6;
 }
+
+/* li{
+  display: block;
+  color: white;
+  font-weight: bold;
+} */
 
 a {
   display: block;
@@ -55,10 +63,17 @@ a {
   position: absolute;
   top: -8vh;
   height: 5vh;
-  font-size: 200%;
+  line-height: 5vh;
   -webkit-transition: top 1s ease-out;
   transition: top 1s ease-out;
   z-index: 100000;
+
+  outline: 0;
+  border-radius: .5rem;
+  color: white;
+	border: 1px solid rgba(0,180,220,0.5);
+	background: black;
+	box-shadow: 0 0 2rem rgba(0,180,220,.1) inset;
 }
 
 .skip > a:focus{
@@ -90,6 +105,13 @@ img{
 
 .occupy{
     display: none;
+}
+
+:target::before {
+  content: "";
+  display: block;
+  height: 60px; /* fixed header height*/
+  margin: -60px 0 0; /* negative fixed header height */
 }
 
 .box{
@@ -183,7 +205,7 @@ a:active {
   padding: 20px 0;
   width: 90%;
   align-self: center;
-  height: 110%;
+  height: 100%;
   transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease;
   margin: 5px;
@@ -203,7 +225,7 @@ a:active {
   transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
   opacity: 1;
-  height: 100%;
+  height: 123%;
   overflow: hidden;
   /* z-index: 999; */
 }
@@ -246,10 +268,13 @@ footer p{
   transform: translateX(-100%);
 }
 
-@media all and (min-width:500px){
+@media all and (min-width:600px){
   .navigation{
     flex-flow: row wrap;
     /* justify-content:space-around; */
+  }
+  .page{
+    white-space:nowrap;
   }
 }
 @media all and (min-width:1000px){
@@ -261,6 +286,7 @@ footer p{
     position:fixed;
     width: 100%;
     z-index: 10000;
+    top:0;
     /*
     flex-flow:column wrap;
     padding:0;
@@ -274,6 +300,7 @@ footer p{
 
   .occupy{
       display: block;
+      visibility: hidden;
   }
 
   .flexcontainer{
@@ -291,9 +318,9 @@ footer p{
     padding:5px;
     position: fixed;
     right:3vw;
-    top:15vh;
+    top:23vh;
+    z-index: 10000000;
   }
-
 
 
   footer{
