--- a/css/gallary.css
+++ b/css/gallary.css
@@ -27,7 +27,7 @@
 #image{
     /* line-height:325px; */
     /* border:5px solid black; */
-    margin:0 auto;
+    /* margin:0 auto; */
     background-repeat: no-repeat;
     background-position: center center;
     /* color:#FFFFFF; */
