--- a/css/style.css
+++ b/css/style.css
@@ -239,11 +239,12 @@ a:active {
   grid-column: 1/3;
   display: flex;
   flex-direction: column;
-  
+  align-items: center;
   justify-content: space-between;
   padding:5px;
   transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
+  /* flex-basis:100%; */
 }
 
 
@@ -274,7 +275,7 @@ a:active {
   -webkit-transition: all 0.5s ease-in-out;
   opacity: 1;
   height: 123%;
-  overflow: hidden;
+  overflow: auto;
   z-index: 10000000;
 }
 
@@ -327,6 +328,13 @@ footer p{
     border-top: none;
   }
 }
+
+@media all and (min-width:600px) and  (orientation:landscape){
+  .flexcontainer > .flexcontainer{
+    flex-direction: row;
+  }
+}
+
 @media all and (min-width:1050px){
   /* .text > .flexcontainer > .div{
     width:30%;
