--- a/css/home.css
+++ b/css/home.css
@@ -71,8 +71,8 @@ h1{
     background-image: url("../images/neighbors/jupiter.jpg");
   }
 
-  #flip-card-gallary{
-    background-image: url("../images/gallary/protoplanetary-disk.jpg");
+  #flip-card-gallery{
+    background-image: url("../images/gallery/protoplanetary-disk.jpg");
   }
 
   #flip-card-others{
